<resources>
    <string name="app_name">Buendeal Customer</string>
    <string name="votes">(%d)</string>
    <string name="votes_reviews">(%d reviews)</string>
    <string name="votes_no_brackets">%d</string>
    <string name="product_counter">%1$d of %2$d</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="continue_">Continue</string>
    <string name="en">EN</string>
    <string name="es">ES</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sing_up">Sing up</string>
    <string name="sing_in">Sing in</string>
    <string name="home">Home</string>
    <string name="catalog">Catalog</string>
    <string name="wishlist">Wishlist</string>
    <string name="wishlists">Wishlists</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="sort_by">Sort by</string>
    <string name="already_have_an_account">I already have an account</string>
    <string name="have_an_account_sign_in">Have an account? Sign in</string>
    <string name="dont_have_an_account_sign_up">Don’t have an account? Sign up</string>
    <string name="private_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="marketplace_feature">Marketplace feature</string>
    <string name="sing_up_with_google">Sign up with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="see_all">See All</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="recently_viewed">Recently viewed</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="create_account">Create account</string>
    <string name="havent_searched">You haven\'t searched for \n anything yet</string>
    <string name="find_things_you_like">Find things you like</string>
    <string name="search_in_categories">Search in categories:</string>
    <string name="email_phone_recover_password">Enter your email or phone number \n to recover your password</string>
    <string name="restore_password">Restore password</string>
    <string name="set_password">Set password</string>
    <string name="set_a_new_password">Set a new password</string>
    <string name="your_request_accepted">Your request has been accepted</string>
    <string name="sent_link_recover_your_password">We sent you a link to recover your password</string>
    <string name="new_psw_successfully_set">New password is successfully set</string>
    <string name="you_logged_into_your_account">You are logged into your account</string>
    <string name="compare_all_sellers">Compare all sellers</string>
    <string name="selected_color">Selected color:</string>
    <string name="other_sellers_propositions_from">Other sellers propositions from %s</string>
    <string name="see_all_reviews"><![CDATA[<font color="#486AF3">See all reviews</font> <font color="#4B5356">(%d)</font>]]></string>
    <string name="all_reviews">All reviews</string>
    <string name="write_a_review">Write a review</string>
    <string name="buy_now">Buy now</string>
    <string name="reviews">Reviews</string>
    <string name="quantity_ratings">%s Ratings</string>
    <string name="whatever_you_want_we_ll_find_it">Whatever you want, we\'ll find it</string>
    <string name="under_construction">UNDER CONSTRUCTION</string>
    <string name="unexpected_server_error">Unexpected Server Error</string>
    <string name="error_unexpected_server_error_">Unexpected server error: %s</string>
    <string name="error_unexpected_server_error">Unexpected server error</string>
    <string name="error_unable_to_communicate_to_server">Unable to communicate to server</string>
    <string name="error_no_internet_connection">No internet connection</string>
    <string name="unexpected_error">Something went wrong. Please check your Internet connection and try again.</string>
    <string name="splash_title">Easiest way to shop online in Panama</string>
    <string name="sing_up_terms_of_use">By tapping Sign Up you accept the Buendeals\n Terms of Use. Please read the Privacy Policy</string>
    <string name="sing_in_terms_of_use">By tapping Sign in you accept the Buendeals\n Terms of Use. Please read the Privacy Policy</string>
    <string name="label"><![CDATA[Field Label<font color="#DA1414">*</font>]]></string>
    <string name="label_email"><![CDATA[Email<font color="#DA1414"> *</font>]]></string>
    <string name="label_password"><![CDATA[Password<font color="#DA1414"> *</font>]]></string>
    <string name="label_prod_description"><![CDATA[Product Description<font color="#DA1414"> *</font>]]></string>
    <string name="label_search">Search</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_display_name">Display Name</string>
    <string name="label_email_username">Email or Username</string>
    <string name="label_email_phone">Email or Phone number</string>
    <string name="label_enter_new_psw">Enter New Password</string>
    <string name="label_confirm_new_psw">Confirm New Password</string>
    <string name="label_enter_token">Enter token</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="hint_prod_description">Tell us about your product</string>
    <string name="hint_what_are_you_looking_for">What are you looking for</string>
    <string name="hint_what_are_you_looking_for_">What are you looking for…</string>
    <string name="hint_input_text_area_write_review">What do you like or don\'t like?</string>
    <string name="add_more_product">Add more products</string>
    <string name="delete_this_list">Delete this list</string>
    <string name="you_didnt_add_any_items">You didn\'t add any items to the comparison</string>
    <string name="compare_all_the_characteristics">Compare all the characteristics of the items you like and buy it only from the best sellers</string>
    <string name="go_to_catalog">Go to catalog</string>
    <string name="comparison_list_title">Comparison lists</string>
    <string name="my_reviews_title">My reviews</string>
    <string name="my_orders_title">My orders</string>
    <string name="total_title">Total</string>
    <string name="cart_title">Cart</string>
    <string name="differences_only">Differences only</string>
    <string name="headphones_for_all">Headphones For All</string>
    <string name="seller">Seller</string>
    <string name="compare_products_title">Compare products (%1$d)</string>
    <string name="customer_q_a"><![CDATA[Customer Q&A]]></string>
    <string name="ask_a_question">Ask a question</string>
    <string name="customer_qa_empty_text">This product has no questions yet. Be the first!</string>
    <string name="customer_qa_text">Get specific details about this product from customers who own it</string>
    <string name="customer_qa_quantity_answers">%d Answers</string>
    <string name="customer_questions_answers_title"><![CDATA[Customer Questions & Answers]]></string>
    <string name="helpful">Helpful?</string>
    <string name="no_d">No (%d)</string>
    <string name="yes_d">Yes (%d)</string>
    <string name="by_s"><![CDATA[<font color="#9DAAB6">By</font> <font color="#000000">%s</font>]]></string>
    <string name="asked_by_s"><![CDATA[<font color="#9DAAB6">Asked by</font> <font color="#000000">%s</font>]]></string>
    <string name="last_date_s">Last %s</string>
    <string name="type_your_question">Type your question</string>
    <string name="type_your_answer">Type your answer</string>
    <string name="write_your_question">Write your question</string>
    <string name="submit_question">Submit question</string>
    <string name="submit_answer">Submit answer</string>
    <string name="answer_this_question">Answer this question</string>
    <string name="answer_a_question">Answer a question</string>
    <string name="best_rated">Best rated</string>
    <string name="title_write_review_screen">Write A Review</string>
    <string name="your_overall_rating">Your overall rating</string>
    <string name="add_images">Add Images</string>
    <string name="submit_a_review">Submit a review</string>
    <string name="d_6">%d/6</string>
    <string name="description">Description</string>
    <string name="specifications">Specifications</string>
    <string name="example_description_product">The new AirPods combine intelligent design with breakthrough technology and crystal clear sound.
        Powered by the new Apple H1 headphone chip, AirPods now feature hands-free access to Siri using just your voice. And up to 3 hours of talk
        time on a single charge. \n\n
        Automatically on, automatically connected \n
        Easy setup for all your apple devices Quick access to Siri by saying \"Hey Siri\" \n
        Double-tap to play or skip forward \n
        Charges quickly in the case \n
        Case can be charged using the lightning connector \n
        Rich, high-quality audio and voice \n
    </string>
    <string name="products">products</string>
    <string name="info">info</string>
    <string name="d_days_on_buendeal">%d days on Buendeal</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="your_wishlist_is_empty">Your wishlist is empty</string>
    <string name="but_it_s_never_too_late_to_fix_it">But it\'s never too late to fix it</string>
    <string name="go_shopping">Go shopping</string>
    <plurals name="order_item_plurals">
        <item quantity="zero">%d item</item>
        <item quantity="one">%d item</item>
        <item quantity="other">%d items</item>
    </plurals>
    <string name="theme_selection_title">Theme selection</string>
    <string name="gender_title">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birth_date_title">Date of birth</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="verify_phone_number">Verify phone number</string>
    <string name="set_new_password">Set new password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="save_changes">Save Changes</string>
    <string name="settings">Settings</string>
    <string name="promotions">Promotions</string>
    <string name="contacts">Contacts</string>
    <string name="about">About</string>
    <string name="no_application_support_action">There is no application that support this action</string>
    <string name="my_questions">My questions</string>
    <string name="questions">Questions</string>
    <string name="popup_answer_question_text">Can the wireless case still be charged with a wire?</string>
    <string name="viewed_items">Viewed items</string>
    <string name="contact_support">Contact support</string>
    <string name="submit">Submit</string>
    <string name="your_email">Your email</string>
    <string name="help_center">Help center</string>
    <string name="summary_checkout_title">Proceed to checkout</string>
    <string-array name="number_of_answers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="your_city">Your city</string>
    <string name="contact_information_title">Contact information</string>
    <string name="was_it_helpful">Was it helpful?</string>
    <string name="ship_item">Ship Item</string>
    <string name="pick_up_in_store">Pick Up in store</string>
</resources>