<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:inputTxtLayout="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/margin_default_input"
    android:layout_marginEnd="@dimen/margin_default_input">

    <TextView
        android:id="@+id/restorePswTitle"
        style="@style/InterMedium.HeaderH4InterMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/set_a_new_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.dnc.buendeal.core.core.ui.view.TextInputLayoutFloatingLabel
        android:id="@+id/token"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        inputTxtLayout:label="@string/label_enter_token"
        android:layout_marginTop="@dimen/margin_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restorePswTitle" />


    <com.dnc.buendeal.core.core.ui.view.TextInputLayoutFloatingLabel
        android:id="@+id/setNewPswTxtInpNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        inputTxtLayout:label="@string/label_enter_new_psw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/token" />


    <com.dnc.buendeal.core.core.ui.view.TextInputLayoutFloatingLabel
        android:id="@+id/setNewPswTxtInpConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        inputTxtLayout:label="@string/label_confirm_new_psw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setNewPswTxtInpNew" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/restorePswBtn"
        style="@style/ContainedBtnGeneralLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:paddingEnd="57dp"
        android:paddingStart="57dp"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/set_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setNewPswTxtInpConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>
