<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:inputTxtLayout="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/margin_default_input"
    android:layout_marginEnd="@dimen/margin_default_input">

    <TextView
        android:id="@+id/restorePswTextCancel"
        style="@style/InterMedium.HeaderH5InterMedium14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textColor="@color/main_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restorePswTitle"
        style="@style/InterMedium.HeaderH4InterMedium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/restore_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restorePswTextCancel" />

    <TextView
        android:id="@+id/restorePswDescription"
        style="@style/InterRegular.Body2InterRegular14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/email_phone_recover_password"
        android:textAlignment="center"
        android:textColor="@color/dark_gray_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restorePswTitle" />

    <com.dnc.buendeal.core.core.ui.view.TextInputLayoutFloatingLabel
        android:id="@+id/restorePswTxtInpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        inputTxtLayout:label="@string/label_email_phone"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restorePswDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/restorePswBtn"
        style="@style/ContainedBtnGeneralLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:paddingEnd="57dp"
        android:paddingStart="57dp"
        android:layout_marginTop="@dimen/margin_default_input"
        android:text="@string/restore_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restorePswTxtInpEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>
